--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </p>
                 </div>
                 <div class="information bouton">
-                    <h3> Mon Porfolio</h3> 
+                    <h3> Mon Portfolio</h3> 
                 </div>
             </div>
             <div class="photo">
