mise en place des experiences class container

--- a/index.html
+++ b/index.html
@@ -32,11 +32,79 @@
             </div>
         </div>
         <div class="container">
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, quis ipsam atque veniam, 
-                adipisci dolore blanditiis placeat odit dolor nesciunt facilis 
-                quasi pariatur quaerat nemo quia omnis eligendi incidunt! Commodi! 
-            </p>
-            <h1 style="color: #FAF2A1;"> Mes expériences </h1>
+            <h1 style="color: #FAF2A1; margin-top: 0px;"> Mes expériences </h1>
+            <div class="experience">
+                <div class="experience1"> 
+                    <h4> Testeur d'application</h4>
+                    <ul>
+                        <li> Assurer la qualité des projets à livrer</li>
+                        <li> Tester les fonctionnalités </li>
+                        <li> Rediger un rapport </li>
+                    </ul>
+                </div>
+                <div class="experience2">
+                    <h4> Ministère de l'économie et des finances </h4>
+                    <ul>
+                        <li> Développement d'application</li>
+                        <li> PostgreSQL</li>
+                        <li> 8 mois</li>
+                    </ul>
+                </div>
+                <div class="experience3">
+                    <h4> Projet d'étude</h4>
+                    <ul>
+                        <li> Logique QI</li>
+                        <li>Application mobile</li>
+                        <li> Java android</li>
+
+                    </ul>
+                </div>
+            </div>
+            <div class="competence">
+                <div class="langage-programmation">   
+                    <img src="./assets/HTML.png" alt="">
+                    <img src="./assets/css.png" alt="">
+                    <img src="./assets/c-icon.png" alt="">
+                    <img src="./assets/java.png" alt="">
+                </div>
+                <div class="langue">
+                    <p>Malagasy</p>
+                    <p>Français</p>
+                    <p>Anglais</p>
+                </div>
+            </div>
+            <div class="formation">
+                <div class="formation1">
+                    <h4> Diplôme de Master</h4>
+                    <ul>
+                        <li> ISPM </li>
+                        <li> 2021 </li>
+                        <li> Java Spring Boot </li>
+                    </ul>
+                </div>
+                <div class="formation2">
+                    <h4> Diplôme de Licence</h4>
+                    <ul>
+                        <li> ISPM</li>
+                        <li> 2017 </li>
+                        <li> DotNet </li>
+                    </ul>
+                </div>
+                <div class="formation3">
+                    <h4> Baccalaureat </h4>
+                    <ul>
+                        <li> LJJR</li>
+                        <li> 2014 </li>
+                        <li> Serie D </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="centre-interet">
+                <p> Lecture </p>
+                <p> Art </p>
+                <p> Atlhétisme</p>
+                <p> Taekwondo </p>
+            </div>
         </div>
     </div>
 </body>
