ajout des icones

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </div>
         </div>
         <div class="container">
-            <h1 style="color: #FAF2A1; margin-top: 0px;"> Mes expériences </h1>
             <div class="experience">
+                <h1 style="color: #FAF2A1; margin-top: 0px;"> <img src="./assets/experience.png" alt="">Mes expériences </h1>
                 <div class="experience1"> 
                     <h4> Testeur d'application</h4>
                     <ul>
@@ -61,6 +61,7 @@
                 </div>
             </div>
             <div class="competence">
+                <h1 style="color: #FAF2A1; margin-top: 0px;"><img src="./assets/competences.png" alt=""> Mes compétences </h1>
                 <div class="langage-programmation">   
                     <img src="./assets/HTML.png" alt="">
                     <img src="./assets/css.png" alt="">
@@ -74,6 +75,7 @@
                 </div>
             </div>
             <div class="formation">
+                <h1 style="color: #FAF2A1; margin-top: 0px;"><img src="./assets/formation.png" alt=""> Mes formations </h1>
                 <div class="formation1">
                     <h4> Diplôme de Master</h4>
                     <ul>
@@ -100,6 +102,7 @@
                 </div>
             </div>
             <div class="centre-interet">
+                <h1 style="color: #FAF2A1; margin-top: 0px;"><img src="./assets/centre-interet.png" alt=""> Mes centres d'intérêt </h1>
                 <p> Lecture </p>
                 <p> Art </p>
                 <p> Atlhétisme</p>
