--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="container">
-            <h1 style="color: #FAF2A1; margin-top: 0px;"> <img src="./assets/experience.png" alt=""> Mes expériences </h1>
+            <h1 style="color: #FAF2A1; margin-top: 0px; padding-top: 20px;"> <img src="./assets/experience.png" alt=""> Mes expériences </h1>
             <div class="experience">
                 <div class="experience1"> 
                     <h4> Testeur d'application</h4>
