Test mode dark light

--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
+    
+    <style>
+        .light-mode{
+            background-color: #DDEDAA;
+            color :black;
+        }
+    </style>
 </head>
 <body>
     <div class="main">
         <div class="header">
+            <div>
+                <button onclick="myFunction()"> Mode light </button>
+            </div>
             <div class="information">
                 <div class="information icone">
                     <img src="./assets/facebook.png" alt="">
@@ -113,5 +123,9 @@
             </div>
         </div>
     </div>
+
+    <script src="./assets/js/mode-light.js">
+
+    </script>
 </body>
 </html>
