Modification bouton mode light mobile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="main">
         <div class="header">
-            <div>
+            <div class="bouton-light-dark">
                 <button onclick="myFunction()"> Mode light </button>
             </div>
             <div class="information">
